# sepe

./: .gitignore  Makefile  README.md  Regexes.toml  bench-runner.sh
artifact/: README.md  rq1_rq2_benchmark.sh  rq3_benchmark.sh  rq5_benchmark.sh  rq6_benchmark.sh  rq6_rq8_benchmark.sh  rq7_benchmark.sh  rq7_performance_collisions.sh  rq8_benchmark.sh  rq9_benchmark.sh  true_collisions.sh
artifact/docker/: Dockerfile  README.md
artifact/expected-results/output-rq3/: incremental_result.csv  normal_result.csv
artifact/expected-results/output_rq8/: 16384.csv  256.csv  64.csv
artifact/expected_outputs/output_rq6/: rq6.csv
keygen/: Cargo.toml
keyuser/: .gitignore  Makefile
keyuser/src/: absl.cc  benchmarks.cpp  benchmarks.hpp  customHashes.cpp  customHashes.hpp  main.cpp
results/gpt-prompts/: cpf.txt  ints.txt  ipv4.txt  ipv6.txt  mac.txt  ssn.txt  url_complex.txt  url_fixed_pattern.txt
scripts/: .gitignore  align_csv.sh  benchmark.sh  benchmark1.sh  distribution_benchmark.sh  global_keyuser_interpreter.py  hash_function_regex.sh  hash_function_toml.sh  install_abseil.sh  keyuser_interpreter.py  make_hash_from_regex.sh  naive_hash_function.sh  old_upper_shifts_interpreter.sh  plot_distribution.py  result_interpreter.py  rq5_benchmark.sh  rq6_rq8_benchmark.sh  rq7_distribution.sh  upper_shifts_benchmark.sh  upper_shifts_interpreter.sh
src/bench-runner/: Cargo.toml
src/keybuilder/: .gitignore  Makefile
src/keygen/: Cargo.toml
src/keygen/src/: main.rs
src/keysynth/: .gitignore  Makefile
src/keyuser/: Makefile
src/sepe-runner/: Cargo.toml
(+195 files in other folders)
