[package]
name = "keygen"
version = "0.1.0"
edition = "2021"
authors = ["Leonardo G. Faé", "Renato B. Hoffmann"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
fastrand = { version = "2.0" }
